--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,11 @@ dependencies {
 	compile 'org.springframework:spring-context:4.3.3.RELEASE'
 	compile 'org.springframework:spring-webmvc:4.3.3.RELEASE'
 	compile 'org.springframework:spring-aspects:4.3.3.RELEASE'
+	compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.8.4'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.8.4'
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 	
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
